--- a/css/custom.css
+++ b/css/custom.css
@@ -1,19 +1,27 @@
-html {
-    position: relative;
-    min-height: 100%;
+ body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    font-family: helvetica, sans-serif;  
   }
-  body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
+
+  .container{
+    flex: 1 0 auto;; 
   }
+  
   .footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
-    /* Set the fixed height of the footer here */
     height: 50px;
-    line-height: 50px; /* Vertically center the text there */
-    background-color: #53dd9b;
+    line-height: 50px; 
+    background-color: #10d676;
     text-align: center;
     font-size: 14px;
+  }
+
+  li a {
+    font-size: 13px;
+  }
+  
+  .navbar-brand{
+    font-size: 15px;
   }
